# mem-bench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  openrouter.toml  pyproject.toml  run_all_tests.sh  run_supermemory_s.py
.github/workflows/: ci.yml
examples/: custom_adapter.py  custom_benchmark.py  mem-bench.toml
full_test_results/bm25_chinese/: report.html  report.md  results.jsonl  summary.json
full_test_results/bm25_oracle_500/: summary.json
full_test_results/bm25_qa_test/: report.html  report.md  results.jsonl  summary.json
full_test_results/bm25_s_20/: report.html  report.md  results.jsonl  summary.json
full_test_results/graphiti_oracle_5/: report.html  report.md  summary.json
full_test_results/hindsight_oracle_20/: report.html  report.md  results.jsonl  summary.json
full_test_results/langmem_oracle_10/: report.html  report.md  results.jsonl  summary.json
full_test_results/letta_oracle_10/: report.html  report.md  summary.json
full_test_results/supermemory_oracle_20/: report.html  report.md  results.jsonl  summary.json
full_test_results/supermemory_oracle_5_v2/: report.html  report.md  results.jsonl  summary.json
src/mem_bench/: __init__.py  __main__.py
src/mem_bench/adapters/: __init__.py  bm25.py  graphiti.py  hindsight.py  langmem.py  letta.py  mem0.py  supermemory.py
src/mem_bench/benchmarks/: _download.py  chinese.py  continual.py  halumem.py  locomo.py  longmemeval.py
src/mem_bench/cli/: __init__.py  _benchmarks.py  app.py  compare.py  download.py  list_cmd.py  run.py
src/mem_bench/core/: adapter.py  benchmark.py  config.py  judge.py  runner.py  types.py
src/mem_bench/evaluation/: cost.py  hallucination.py  latency.py  qa.py  retrieval.py
src/mem_bench/reporting/: __init__.py  _utils.py  console.py  html_report.py  json_report.py  markdown_report.py
test_results/bm25/: results.jsonl  summary.json
test_results/graphiti/: results.jsonl  summary.json
test_results/hindsight/: results.jsonl  summary.json
test_results/letta/: results.jsonl  summary.json
test_results/mem0/: results.jsonl  summary.json
tests/: conftest.py  test_adapter_compliance.py  test_adapter_protocol.py  test_config.py  test_evaluation.py  test_runner.py
