[project]
name = "mem-bench"
version = "0.1.0"
description = "Standardized benchmark framework for AI memory systems"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "rivercrab26" },
]
keywords = ["ai", "memory", "benchmark", "evaluation", "llm", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "huggingface-hub>=0.20",
    "rank-bm25>=0.2.2",
    "numpy>=1.26",
    "tqdm>=4.60",
    "requests>=2.31",
]

[project.optional-dependencies]
mem0 = ["mem0ai"]
graphiti = ["graphiti-core"]
langmem = ["langchain", "langmem"]
letta = ["letta"]
judge = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
supermemory = ["supermemory"]
all = ["mem0ai", "graphiti-core", "langchain", "langmem", "letta", "openai>=1.0", "anthropic>=0.30", "supermemory"]
dev = ["pytest>=8.0", "ruff>=0.4", "pyright>=1.1"]

[project.scripts]
mem-bench = "mem_bench.cli.app:main"

[project.entry-points."mem_bench.adapters"]
bm25 = "mem_bench.adapters.bm25:BM25Adapter"
mem0 = "mem_bench.adapters.mem0:Mem0Adapter"
graphiti = "mem_bench.adapters.graphiti:GraphitiAdapter"
langmem = "mem_bench.adapters.langmem:LangMemAdapter"
letta = "mem_bench.adapters.letta:LettaAdapter"
hindsight = "mem_bench.adapters.hindsight:HindsightAdapter"
supermemory = "mem_bench.adapters.supermemory:SupermemoryAdapter"

[project.entry-points."mem_bench.benchmarks"]
longmemeval = "mem_bench.benchmarks.longmemeval:LongMemEvalBenchmark"
locomo = "mem_bench.benchmarks.locomo:LoCoMoBenchmark"
halumem = "mem_bench.benchmarks.halumem:HaluMemBenchmark"
chinese = "mem_bench.benchmarks.chinese:ChineseMemBenchmark"
continual = "mem_bench.benchmarks.continual:ContinualLearningBenchmark"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mem_bench"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/mem_bench/reporting/html_report.py" = ["E501"]
"src/mem_bench/benchmarks/chinese.py" = ["E501"]
"src/mem_bench/benchmarks/continual.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src/mem_bench/core"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
